fix: wrap related products header section correctly on mobile viewports

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -104,6 +104,9 @@
   display: flex
   align-items: center
 
+  @media screen and (max-width: $break-small)
+    display: block
+
   .related-products-view-all-link
     margin-left: auto
 
